# misphereconverter_automation

./: .flake8  .gitignore  .pylintrc  Makefile  lint.sh  mypy.ini  setup.cfg  stitch.py
misphereconverter_automation/: stitch.py
