[metadata]
name = misphereconverter
version = 0.0.1

[options]
py_modules =
    stitch

[options.entry_points]
console_scripts =
    misphereconverter_stitch = stitch:main
panoedit.stitchpanorama =
    misphereconverter = stitch:PanoeditStitchPlugin

[options.extras_require]
test =
    black
    pylint
    flake8
    flake8-import-order
