[metadata]
name = misphereconverter_automation
version = 0.0.2

[options]
packages = find:

[options.entry_points]
console_scripts =
    misphereconverter_stitch = misphereconverter_automation.stitch:main

[options.package_data]
misphereconverter_automation =
    py.typed

[options.extras_require]
test =
    black
    pylint
    flake8<6
    flake8-import-order
    mypy
    types-setuptools
